update sway conf

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -41,6 +41,7 @@ dpi-aware=no
 
 [main]
 include=/usr/share/foot/themes/gruvbox-material
+# include=/usr/share/foot/themes/gruvbox-light
 
 [bell]
 # urgent=no
