--- a/sway/config
+++ b/sway/config
@@ -8,7 +8,7 @@
 #
 # Logo key. Use Mod1 for Alt.
 # Use Mod4 for Logo key.
-set $mod Mod1
+set $mod Mod4
 # Home row direction keys, like vim
 set $left h
 set $down j
@@ -101,7 +101,8 @@ for_window [app_id="zoom"] floating enable
 #
     # Start a terminal
     bindsym $mod+Return exec $term
-    bindsym $mod+shift+Return exec xterm -fa 'VictorMono Nerd Font:size=11'
+    # bindsym $mod+shift+Return exec xterm -fa 'VictorMono Nerd Font:size=11'
+    bindsym $mod+Shift+Return exec gnome-terminal
 
     # Kill focused window
     bindsym $mod+q kill
@@ -309,6 +310,7 @@ exec --no-startup-id pipewire &
 exec --no-startup-id pipewire-pulse &
 exec foot --server
 exec xrdb /home/callum/.Xresources
+exec export _JAVA_AWT_WM_NONREPARENTING=1
 # exec slack && sway '[class="slack"]' move container to workspace 0
 # exec zoom && sway '[class="zoom"]' move container to workspace 9
 # exec thunderbird && sway '[app_id="thunderbird"]' move container to workspace 8
