--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -40,8 +40,9 @@ dpi-aware=no
 # name=value
 
 [main]
-include=/usr/share/foot/themes/gruvbox-material
+# include=/usr/share/foot/themes/gruvbox-material
 # include=/usr/share/foot/themes/gruvbox-light
+include=/usr/share/foot/themes/rose-pine
 
 [bell]
 # urgent=no
