--- a/sway/config
+++ b/sway/config
@@ -1,8 +1,11 @@
+output HDMI-A-1 resolution 2560x1080@74.991Hz
+
 # Default config for sway
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
 #
 # Read `man 5 sway` for a complete reference.
+
 
 ### Variables
 #
@@ -15,18 +18,17 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term footclient
+set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 #set $menu dmenu_path | dmenu | xargs swaymsg exec --
-set $menu exec fuzzel
+set $menu dmenu_path | wmenu | xargs swaymsg exec --
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # output * bg ~/Pictures/camille-villanueva-zsAPsRjzXRI-unsplash.jpg fill
-output * bg ~/Pictures/2zo8wlittc7d1.png fill
 # output eDP-1 bg ~/Pictures/ucwokcgii3241.png fill
 # output DP-1 bg ~/Pictures/ucwokcgii3241.png fill
 #output * bg ~/Pictures/IMG_6622.jpeg fill
@@ -37,33 +39,14 @@ output * bg ~/Pictures/2zo8wlittc7d1.png fill
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
- # set $4k DP-1
- set $monLeft DP-4
- set $monRight DP-3
- set $monMiddle 'LG Electronics LG HDR WFHD 0x0000069E'
-# set $monLeft DP-6
-# set $monRight DP-7
-# set $monMiddle DP-8
-set $laptop eDP-1
-
-output $monMiddle resolution 2560x1080@74.991Hz pos 1080 0
-output $monLeft resolution 1920x1080 pos 0 0
-output $monRight resolution 1920x1080 pos 1920 0 
-output $4k resolution 2560x1440@74.997Hz 
-# output $4k resolution 3840x2160 
-output DP-1 scale 2
-
-# output $monLeft disable
-# output $monRight disable
- output DP-7 disable
-# output $monMiddle disable
-# output $laptop disable
+output 'LG Electronics LG HDR WFHD 0x0004029E' resolution 2560x1080@74.991Hz
 
 # non-stacking windows
 for_window [app_id="pavucontrol"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [app_id="zoom"] floating enable
+for_window [app_id="firefox"] border pixel none
 
 ### Idle configuration
 #
@@ -101,7 +84,6 @@ for_window [app_id="zoom"] floating enable
     # Start a terminal
     bindsym $mod+Return exec $term
     # bindsym $mod+shift+Return exec xterm -fa 'VictorMono Nerd Font:size=11'
-    bindsym $mod+Shift+Return exec gnome-terminal
 
     # Kill focused window
     bindsym $mod+q kill
@@ -126,8 +108,11 @@ for_window [app_id="zoom"] floating enable
 
 	# Keyboard volume control
 	bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-	bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-	bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+	bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ +5%
+	bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ -5
+	bindsym $mod+KP_Next exec wpctl set-volume @DEFAULT_SINK@ +5%
+	bindsym $mod+KP_Prior exec wpctl set-volume @DEFAULT_SINK@ -5%
+
 
   # Keyboard brightness control
   bindsym XF86MonBrightnessUp exec brightnessctl set +5%
@@ -261,49 +246,16 @@ bindsym $mod+r mode "resize"
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
+bar {
+    position top
 
-### Bar
-  bar {
-   swaybar_command waybar
-  }
+    # When the status_command prints a new line to stdout, swaybar updates.
+    # The default just shows the current date and time.
+    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
 
-
-### Styling
-  # Gaps
-  gaps inner 0
-  gaps outer 0
-  smart_gaps off
-  hide_edge_borders smart_no_gaps
-
- ### cursor
-
-seat seat0 xcursor_theme BreezeX-RosePine-Linux
-
-  # Borders
-  # default_border pixel 1
-  # for_window [class=".*"] border pixel 3
-  for_window [app_id="firefox"] border pixel none
-
-##============ rose pine =================##
-
- ### Colors
-   # Class                   Border      BG          Text        Indicator   Child border
-   client.focused            #eb6f92     #191724	    #e0def4     #fffffff2   #eb6f92
-   client.unfocused          #191724	    #191724	#e0def4     #cc241d     #191724
-   client.focused_inactive   #191724	    #191724	#e0def4     #ffffff88   #191724 
-   client.background         #191724
-
-include /etc/sway/config.d/*
-exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
-
-# xwayland disable
-
-exec --no-startup-id pipewire &
-exec --no-startup-id pipewire-pulse &
-exec foot --server
-exec xrdb /home/callum/.Xresources
-exec export _JAVA_AWT_WM_NONREPARENTING=1
-# exec slack && sway '[class="slack"]' move container to workspace 0
-# exec zoom && sway '[class="zoom"]' move container to workspace 9
-# exec thunderbird && sway '[app_id="thunderbird"]' move container to workspace 8
-# exec appgate && sway '[class="appgate"]' move container to workspace 7
+    colors {
+        statusline #ffffff
+        background #323232
+        inactive_workspace #32323200 #32323200 #5c5c5c
+    }
+}
