--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,13 @@
 theme = "Apple System Colors"
 macos-titlebar-style = "tabs"
-window-decoration = "false"
+# window-decoration = "false"
 cursor-style = "block"
 cursor-style-blink = "false"
 font-size = "14"
+
+macos-option-as-alt = true
+
+keybind = alt+left=unbind
+keybind = alt+right=unbind
+confirm-close-surface=false
 
