adding hyprland conf

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=VictorMono Nerd Font:size=11, Joypixels
+font=monospace:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -20,7 +20,6 @@ font=VictorMono Nerd Font:size=11, Joypixels
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 # box-drawings-uses-font-glyphs=no
-dpi-aware=no
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
@@ -42,7 +41,6 @@ dpi-aware=no
 [main]
 # include=/usr/share/foot/themes/gruvbox-material
 # include=/usr/share/foot/themes/gruvbox-light
-include=/usr/share/foot/themes/rose-pine
 
 [bell]
 # urgent=no
